[gd_scene load_steps=6 format=3 uid="uid://cya77rhouqu0q"]

[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_b07rx"]
[ext_resource type="Script" path="res://Scenes/Title.gd" id="2_s7e3n"]
[ext_resource type="Texture2D" uid="uid://cpgd5nmgi1qkg" path="res://Assets/art/bepy.png" id="3_45n8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_clceu"]

[sub_resource type="Theme" id="Theme_dsyo0"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_b07rx")

[node name="Continue" type="Button" parent="."]
offset_left = 1096.0
offset_top = 299.0
offset_right = 1760.0
offset_bottom = 449.0
theme_override_font_sizes/font_size = 58
theme_override_styles/normal = SubResource("StyleBoxEmpty_clceu")
text = "Continue
"
flat = true

[node name="New game" type="Button" parent="."]
offset_left = 1096.0
offset_top = 566.0
offset_right = 1760.0
offset_bottom = 716.0
theme = SubResource("Theme_dsyo0")
theme_override_font_sizes/font_size = 58
toggle_mode = true
button_mask = 0
text = "New Game"
flat = true

[node name="Settings" type="Button" parent="."]
offset_left = 1101.0
offset_top = 825.0
offset_right = 1765.0
offset_bottom = 975.0
theme_override_font_sizes/font_size = 58
text = "Settings
"
flat = true

[node name="Title" type="Label" parent="."]
offset_left = 1093.0
offset_top = 58.0
offset_right = 1781.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 58
text = "Sillyman Incorporated"
horizontal_alignment = 1
script = ExtResource("2_s7e3n")

[node name="Bepy" type="Sprite2D" parent="."]
position = Vector2(507, 543)
scale = Vector2(0.45752, 0.491699)
texture = ExtResource("3_45n8s")

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
